# deep-q-tetris

./: .gitignore  board.py  deep_q_network.py  i_piece.py  j_piece.py  l_piece.py  main.py  o_piece.py  pieces.py  pyproject.toml  rotation.py  s_piece.py  t_piece.py  tetris.py  train.py  z_piece.py
