[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "lst baaaaybeee"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
argparse = "^1.4.0"
numpy = "^1.25.1"
tensorboardx = "^2.6.1"
mypy = "^1.4.1"
opencv-python = "^4.8.0.74"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylsp-mypy]
enabled = true
strict = true
live_mode = true
